fixed navbar size on mobile

--- a/style.css
+++ b/style.css
@@ -227,8 +227,11 @@ a{
 @media only screen and (max-width: 767px) {
   .navBarButton{
     font-size: 13px;
-    padding: 15px 5px;
+    padding: 5px 5px;
     margin: 2px 5px;
+  }
+  .navBarButtonContainer{
+    padding: 5px;
   }
   .landingBioHeader{
     font-size: 30px;
@@ -496,7 +499,7 @@ p{
   position: absolute;
   right: 0;
   top: 0;
-  padding:15px;
+  padding:13px;
   width: 30px;
   filter: invert(0);
   opacity: 0.8;
@@ -515,9 +518,9 @@ p{
     font-size: 20px;
   }
   .linkedInButton{
-    width: 25px;
-    height: 25px;
-    padding:13px;
+    width: 20px;
+    height: 20px;
+    padding:8px;
   }
 }
 
